[gd_scene load_steps=9 format=3 uid="uid://cd760lci7p27c"]

[ext_resource type="Script" path="res://Menu/params_menu.gd" id="1_fcy71"]
[ext_resource type="FontFile" uid="uid://b3sooqo0xdhhl" path="res://Assets/Fonts/fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" id="2_emsua"]

[sub_resource type="Theme" id="Theme_tp6k6"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/fonts/font = ExtResource("2_emsua")

[sub_resource type="Theme" id="Theme_m4i0t"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/fonts/font = ExtResource("2_emsua")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pe5r3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pibrt"]
bg_color = Color(0, 0, 0, 1)
border_width_bottom = 5
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2pfx"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id="Theme_rj6j4"]
Button/fonts/font = ExtResource("2_emsua")
Button/styles/hover = SubResource("StyleBoxFlat_pe5r3")
Button/styles/normal = SubResource("StyleBoxFlat_pibrt")
Button/styles/pressed = SubResource("StyleBoxFlat_r2pfx")

[node name="ParamsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fcy71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="English" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.601
anchor_top = 0.823
anchor_right = 0.601
anchor_bottom = 0.823
offset_left = -65.8
offset_top = -58.8
offset_right = 8.19992
offset_bottom = -27.8
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_tp6k6")
text = "English
"

[node name="Français" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39
anchor_top = 0.823
anchor_right = 0.39
anchor_bottom = 0.823
offset_left = -43.0001
offset_top = -58.8
offset_right = 29.9999
offset_bottom = -27.8
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_m4i0t")
text = "Français
"

[node name="ExitParams" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.495
anchor_top = 0.939
anchor_right = 0.495
anchor_bottom = 0.939
offset_left = -112.0
offset_top = -44.4
offset_right = 38.0
offset_bottom = -12.4
scale = Vector2(1.5, 1.5)
theme = SubResource("Theme_rj6j4")
text = "EXIT SETTINGS"

[connection signal="pressed" from="Panel/English" to="." method="_on_english_pressed"]
[connection signal="pressed" from="Panel/Français" to="." method="_on_franais_pressed"]
[connection signal="pressed" from="Panel/ExitParams" to="." method="_on_exit_params_pressed"]
